[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/LXGWWenKaiGB-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://well_prepared sucai/object/新建文件夹/大血药.png" type="Texture" id=2]
[ext_resource path="res://well_prepared sucai/object/新建文件夹/小血药.png" type="Texture" id=3]
[ext_resource path="res://well_prepared sucai/object/新建文件夹/无敌药水.png" type="Texture" id=4]
[ext_resource path="res://well_prepared sucai/object/新建文件夹/轻灵液.png" type="Texture" id=5]
[ext_resource path="res://inventury/selected.png" type="Texture" id=6]
[ext_resource path="res://UI/prop.gd" type="Script" id=7]

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 5
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
resource_local_to_scene = true
size = 5
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 7
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
resource_local_to_scene = true
size = 5
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="prop" type="GridContainer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -43.0
margin_right = 43.0
custom_constants/vseparation = 7
custom_constants/hseparation = 7
columns = 2
script = ExtResource( 7 )

[node name="TextureRect1" type="TextureRect" parent="."]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="TextureRect1"]
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="TextureRect1/TextureRect"]
margin_top = -7.0
margin_right = 19.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="Label2" type="Label" parent="TextureRect1/TextureRect"]
margin_top = -7.0
margin_right = 22.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 2
valign = 2

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = 25.0
margin_right = 43.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="TextureRect2"]
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="TextureRect2/TextureRect"]
margin_top = -7.0
margin_right = 17.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "2"
align = 1

[node name="Label2" type="Label" parent="TextureRect2/TextureRect"]
margin_top = -7.0
margin_right = 20.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 2
valign = 2

[node name="TextureRect3" type="TextureRect" parent="."]
margin_top = 25.0
margin_right = 18.0
margin_bottom = 43.0
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="TextureRect3"]
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="TextureRect3/TextureRect"]
margin_top = -5.0
margin_right = 19.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "3
"
align = 1

[node name="Label2" type="Label" parent="TextureRect3/TextureRect"]
margin_top = -5.0
margin_right = 22.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 2
valign = 2

[node name="TextureRect4" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 43.0
margin_bottom = 43.0
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="TextureRect4"]
rect_min_size = Vector2( 18, 18 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TextureRect4/TextureRect"]
margin_top = -5.0
margin_right = 18.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 4 )
text = "4
"
align = 1

[node name="Label2" type="Label" parent="TextureRect4/TextureRect"]
margin_top = -5.0
margin_right = 21.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
valign = 2

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
